# NClass

./: .gitignore  README.txt
lib/CrashReporter.NET-1.5/: CrashReporter.NET.sln
lib/NRefactory/: NRefactory.sln  NRefactory.userprefs
lib/NReflect_v0.9.4_src/: NReflect.sln  README.txt  changelog.txt
lib/NStub/: NStub.sln  README.md
lib/cecil/: Mono.Cecil.csproj
lib/mono-gtkspell-sharp/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.in  gtkspell-sharp-2.0.pc.in  gtkspell-sharp.snk
lib/mono-gtkspell-sharp/gtkspell/: AssemblyInfo.cs.in  Makefile.am  gtkspell-api.raw  gtkspell-sharp.dll.config.in  gtkspell.metadata
src/: NClass.sln
src/AssemblyCSharpImport/: AssemblyCSharpImport.csproj  CSharpImport.cs  Common.cs  Declaration.cs  Extensions.cs  ImportPlugin.cs  ImportSettings.cs  ImportSettingsForm.Designer.cs  ImportSettingsForm.cs  ImportSettingsForm.resx  NClassImportFilter.cs  NClassImportFilter.cs.bak  NETImport.cs  NETImportPlugin.cs  Settings.cs  TO DO.txt  app.config
src/AssemblyImport/: AssemblyImport.csproj  NClassImportFilter.cs  NETImport.cs
src/CSharp/: CSharp.csproj  CSharpArgumentList.cs  CSharpClass.cs  CSharpConstructor.cs  CSharpDelegate.cs  CSharpDestructor.cs  CSharpEnum.cs  CSharpEnumValue.cs  CSharpEvent.cs  CSharpField.cs  CSharpInterface.cs  CSharpLanguage.cs  CSharpMethod.cs  CSharpParameter.cs  CSharpProperty.cs  CSharpStructure.cs
src/CSharpCodeSourceImport/: CSharpCodeSourceImport.build  CSharpCodeSourceImport.cs  CSharpCodeSourceImport.csproj  CSharpCodeSourceImportPlugin.cs  ImportSettings.cs  ImportSettingsForm.Designer.cs  ImportSettingsForm.cs
src/CodeGenerator/: CSharpExtendedGenerator.cs  CSharpFormattingOptionsUI.cs  CSharpProjectGenerator.cs  CSharpSourceFileGenerator.cs  CodeGenerator.csproj  CopyrightHeader.Designer.cs  CopyrightHeader.cs  Dialog.cs  (+20 more)
(+658 files in other folders)
